--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         <section>
-            <img src="https://example.com/your-image.jpg" alt="Image Description" style="height: 300px;">
+            <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="Image Description" style="height: 300px;">
             <p>5 software program developer profession paths</p>
             <ul>
                 <li>Cloud development</li>
